Remotely/remotely.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: remotely
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: remotely
  name: remotely
  namespace: remotely
spec:
  selector:
    matchLabels:
      app: remotely
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: remotely
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: immybot/remotely:latest
        imagePullPolicy: Always
        name: remotely
        volumeMounts:
        - mountPath: /app/AppData
          name: remotely-content


      volumes:
      - name: remotely-content
        persistentVolumeClaim:
          claimName: remotely-claim
