Remotely/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: remotely
  namespace: remotely
spec:
  selector:
    app: remotely
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
