Remotely/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: remotely
  namespace: remotely
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`remotely.kbtech.org`)
      kind: Rule
      services:
        - name: remotely
          port: 5000
  tls:
    secretName: kbtech-tls # change to your cert name
